# discord-fixer

./: Cargo.toml  LICENSE  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
assets/: icon-256.rgba  make_icons.py
packaging/linux/: appimage.sh  discord-desktop-fixer.desktop
packaging/macos/: Info.plist  bundle.sh  entitlements.plist
packaging/windows/: app.manifest  app.rc
scripts/: check-all-targets.sh
src/: app.rs  clean.rs  discord.rs  job.rs  kill.rs  launch.rs  main.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
